--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.scss
@@ -12,4 +12,13 @@
 	kt-portlet-body{
 		min-height: 67vh !important;
 	}
+	.apply-kyc {
+        width: 165px;
+	}
+	.th-style{
+		width:20%
+	}
+	.th-padding-style{
+		padding-left:3% ;
+	}
 }
