--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.scss
@@ -2,4 +2,19 @@
     .apply-kyc {
         width: 165px;
     }
+    .th-style{
+		width:20%
+	}
+	.th-padding-style{
+		padding-left:3% ;
+    }
+    .th-p-style{
+		padding-left:7% ;
+    }
+    .th-width-style{
+        width:25%
+    }
+    .th-padding-left-style{
+        padding-left:12% ;
+    }
 }
