--- a/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
@@ -128,7 +128,7 @@
                                 </div>
                                 <div class="col-8">
                                     <input class="form-control" [matDatepicker]="picker" (click)="picker.open()"
-                                        formControlName="depositDate"
+                                        formControlName="depositDate" [min]="minDate"
                                         [class.isError]="controls.depositDate.touched && controls.depositDate.invalid"
                                         readonly placeholder="4/5/2020" />
                                     <mat-datepicker #picker></mat-datepicker>
