--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -248,8 +248,6 @@
                         </div>
 
 
-
-                        <!-- Internal Branch -->
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">Internal Branch</mat-label>
@@ -268,21 +266,16 @@
                                     *ngIf="controls.internalBranchId.touched && controls.internalBranchId.errors?.required">
                                     Required field
                                 </mat-error>
-
-                                <!-- </mat-form-field> -->
                             </div>
                         </div>
 
 
-                        <!-- State -->
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">State</mat-label>
                             </div>
 
                             <div class="col-8">
-                                <!-- <mat-form-field appearance="outline" class="w-100"> -->
-                                <!-- <mat-label class="mandatory">State</mat-label> -->
                                 <select class="form-control" formControlName="stateId" (change)="getCities()" margin
                                     [class.isError]="controls.stateId.touched && controls.stateId.invalid">
                                     <option disabled selected value=""> Select State</option>
@@ -294,19 +287,16 @@
                                     Required field
                                 </mat-error>
 
-                                <!-- </mat-form-field> -->
                             </div>
                         </div>
 
 
-                        <!-- City -->
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">City</mat-label>
                             </div>
 
                             <div class="col-8">
-                                <!-- <mat-form-field appearance="outline" class="w-100"> -->
                                 <select class="form-control" formControlName="cityId" margin
                                     [class.isError]="controls.cityId.touched && controls.cityId.invalid">
                                     <option selected value="" disabled> Select City</option>
@@ -316,25 +306,21 @@
                                 </select>
                                 <mat-error *ngIf="controls.cityId.touched && controls.cityId.errors?.required">
                                     Required field</mat-error>
-                                <!-- </mat-form-field> -->
                             </div>
                         </div>
 
-                        <!-- Date & Time -->
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">Pin Code</mat-label>
                             </div>
 
                             <div class="col-8">
-                                <!-- <mat-form-field appearance="outline" class="w-100"> -->
                                 <input class="form-control" formControlName="pinCode" numbersOnly maxlength="6"
                                     placeholder="000 000">
                                 <mat-error *ngIf="controls.pinCode.errors?.required && controls.pinCode.touched">
                                     Required field</mat-error>
                                 <mat-error *ngIf="controls.pinCode.errors?.pattern && controls.pinCode.touched">
                                     Invalid Input</mat-error>
-                                <!-- </mat-form-field> -->
                             </div>
                         </div>
 
@@ -345,24 +331,36 @@
                             </div>
 
                             <div class="col-8">
-                                <!-- <mat-form-field appearance="outline" class="w-100"> -->
                                 <input class="form-control" formControlName="dateTime" readonly
                                     placeholder="Enter Full Name" value="{{currentDate |  date:'medium'}}">
                                 <mat-error *ngIf="controls.dateTime.errors?.required ">Required field</mat-error>
-                                <!-- </mat-form-field> -->
                             </div>
                         </div>
 
+                        <div class="row kt-padding-t-15">
+                            <div class="col-4 form-label">
+                                <mat-label class="mandatory">Select Product</mat-label>
+                            </div>
 
-                        <!-- Status -->
+                            <div class="col-8">
+                                <select class="form-control" formControlName="moduleId"
+                                    [class.isError]="controls.moduleId.touched && controls.moduleId.invalid">
+                                    <option selected disabled value=null>Select Product</option>
+                                    <option *ngFor="let module of modules" [value]="module.id">
+                                        {{module.moduleName | titlecase}}
+                                    </option>
+                                </select>
+                                <mat-error *ngIf="controls.moduleId.errors?.required && controls.moduleId.touched">
+                                    Required field</mat-error>
+                            </div>
+                        </div>
+
                         <div class="row kt-padding-t-15 kt-padding-b-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">Select Status</mat-label>
                             </div>
 
                             <div class="col-8">
-                                <!-- <mat-form-field appearance="outline" class="w-100"> -->
-                                <!-- <mat-label class="mandatory">Select</mat-label> -->
                                 <select class="form-control" formControlName="statusId" (change)="commentBox()"
                                     [class.isError]="controls.statusId.touched && controls.statusId.invalid">
                                     <option selected disabled value=null>Select Status</option>
@@ -372,7 +370,6 @@
                                 </select>
                                 <mat-error *ngIf="controls.statusId.errors?.required && controls.statusId.touched">
                                     Required field</mat-error>
-                                <!-- </mat-form-field> -->
                             </div>
                         </div>
                         <div class="row kt-padding-t-15" *ngIf="controls.statusId.value != 1 && showCommentBox">
@@ -387,51 +384,8 @@
                                     Required field</mat-error>
                             </div>
                         </div>
-                        <!-- <div class="row">
-                                <div class="col">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label class="mandatory">State</mat-label>
-                                        <mat-select formControlName="stateId" (selectionChange)="getCities($event)">
-                                            <mat-option *ngFor="let state of states" [value]="state.id">
-                                                {{state.name}}
-                                            </mat-option>
-                                        </mat-select>
-                                        <mat-error *ngIf="controls.stateId.errors?.required">Required field</mat-error>
-
-                                    </mat-form-field>
-                                </div>
-
-                                <div class="col">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label class="mandatory">City</mat-label>
-                                        <mat-select formControlName="cityId">
-                                            <mat-option *ngFor="let city of cities" [value]="city.id">
-                                                {{city.name}}
-                                            </mat-option>
-                                        </mat-select>
-                                        <mat-error *ngIf="controls.cityId.errors?.required">Required field</mat-error>
-
-                                    </mat-form-field>
-                                </div>
-                            </div> -->
-
-
                     </div>
                 </div>
-
-                <!-- <div class="kt-form__actions kt-form__actions--solid">
-                        <div class="row text-right">
-                            <div class="col-lg-12">
-                                <kt-button [type]="'button'" [value]="'Add'" [isDisabled]="leadForm.invalid"
-                                    (action)="onSubmit()">
-                                </kt-button>
-                                &nbsp;
-                                <kt-button [type]="'reset'" [value]="'Cancel'" (action)="closeModal()">
-                                </kt-button>
-                            </div>
-                        </div>
-                    </div> -->
-
 
                 <div class="p-3" *ngIf="data.action != 'view'">
                     <kt-modal-footer *ngIf="data.action == 'add'" (action)="action($event)" [value]="data.action">
