bm::loan details bug, quick pay scroll

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.html
@@ -80,7 +80,7 @@
                     <mat-header-cell *matHeaderCellDef>
                         Previous LTV
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.previousLtv}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="netWeight">
